fixed z-index bug for expense overview

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,7 +47,6 @@ body {
   align-items: flex-end;
   border-radius: 0 0 20px 20px;
   background-color: #6488e5;
-  z-index: 1;
 }
 
 .header {
@@ -113,6 +112,7 @@ body {
   max-width: 500px;
   height: 185px;
   margin-top: 15px;
+  z-index: -1;
 }
 
 .expenses-overview-wrapper {
